--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,7 +27,9 @@
 .App-link {
   color: #61dafb;
 }
-
+.logoPoke{
+  z-index: -1;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
