--- a/client/src/Components/CardDetail/cardDetail.css
+++ b/client/src/Components/CardDetail/cardDetail.css
@@ -4,6 +4,10 @@
     background-size: cover;
     background-position: center; */
 }
+.backgroundCard{
+  background-image: url("../../image/FondoDetail.jpg");
+  background-size: cover;
+}
 .pokeDex {
   margin-bottom: -876px;
 }
