--- a/client/src/Components/Paginado/paginado.css
+++ b/client/src/Components/Paginado/paginado.css
@@ -5,8 +5,8 @@
     padding: 0%;
 }
 .pagButton{
- background-color: red;
- /* border-radius: 100px; */
+  background-color:  #d72554;
+ border-radius: 50px;
   color: white;
   padding: 15px 12px;
   text-align: center;
