--- a/client/src/Components/Home/home.css
+++ b/client/src/Components/Home/home.css
@@ -52,6 +52,6 @@
     text-decoration: none;
     font-family: 'Shippori Antique B1', sans-serif;
     font-size: 15px;
-    margin-left: 362px
+    margin-left: 634px;
   }
   
