--- a/client/src/Components/CreatePokemon/createPokemon.css
+++ b/client/src/Components/CreatePokemon/createPokemon.css
@@ -33,3 +33,31 @@
   position: relative;
   height: 900px;
 }
+
+.buttonVolverForm{
+  margin-left: 26px;
+  display: flex;
+  color: white;
+  background-color:  white ;
+  color:black;
+   border-radius: 50px;
+  text-align: center;
+  justify-content: space-between;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-family: 'Shippori Antique B1', sans-serif;
+  margin-left: 355px;
+  
+}
+
+
+.buttonCreate{
+  border-radius: 50px;
+  color: white;
+  padding: 15px 12px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  color:black;
+}
